--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -24,27 +24,20 @@
         />
 
     <TextView
+        android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_places_spb"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="60dp"
         android:textColor="@color/white"
         android:textSize="20sp"
+        android:textStyle="italic"
         android:lineSpacingExtra="5sp"
-        app:layout_constraintBottom_toTopOf="@id/btn_lets_go"
-        app:layout_constraintStart_toStartOf="@id/btn_lets_go"/>
-    
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_lets_go"
-        android:layout_width="311dp"
-        android:layout_height="52dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/lets_go"
-        android:textColor="@color/white"
-        android:background="@drawable/splash_btn_bg"
-        android:layout_marginBottom="48dp"/>
+        app:layout_constraintStart_toStartOf="parent"/>
+    
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
