--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -38,6 +38,34 @@
                 android:paddingEnd="0dp"
                 app:drawableTopCompat="@drawable/icon_back" />
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/description_icon_like"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:cardCornerRadius="20dp"
+                android:visibility="gone"
+                android:layout_marginStart="370dp"
+                android:layout_marginTop="210dp"
+                >
+
+                <ImageView
+                    android:id="@+id/icon_like_black"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/icon_favorite_black"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/icon_like_red"
+                android:layout_width="25dp"
+                android:visibility="gone"
+                android:layout_height="25dp"
+                android:layout_marginStart="370dp"
+                android:layout_marginTop="210dp"
+                android:src="@drawable/icon_heart_red"/>
+
 
         </androidx.cardview.widget.CardView>
 
@@ -99,7 +127,7 @@
             android:id="@+id/description_view_pager"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="#F5F6F6"
+            android:background="@color/description_viewpager_bg"
             android:layout_marginTop="20dp"
             android:paddingHorizontal="30dp"
             app:layout_constraintTop_toBottomOf="@id/place_gallery"
@@ -155,9 +183,9 @@
             android:textAllCaps="true"
             android:gravity="center"
             android:drawablePadding="3dp"
-            android:layout_marginStart="170dp"
-            app:layout_constraintTop_toTopOf="@id/address"
-            app:layout_constraintStart_toEndOf="@id/address"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/subway_name"
+            app:layout_constraintStart_toStartOf="@id/subway_name"
             android:text="@string/site"
             app:drawableStartCompat="@drawable/icon_browser" />
 
@@ -166,7 +194,7 @@
             android:id="@+id/place_site"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/address"
+            app:layout_constraintTop_toBottomOf="@id/site"
             app:layout_constraintStart_toStartOf="@id/site"
             tools:text="brusnitsyn.spb.ru"
             android:fontFamily="@font/circular"
@@ -222,7 +250,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/subway"
             app:layout_constraintStart_toStartOf="@id/address"
-            app:layout_constraintBottom_toBottomOf="parent"
+
             android:layout_marginBottom="10dp"
             tools:text="ежедневно 10:00–0:00"
             android:gravity="start|center"
@@ -234,19 +262,55 @@
             android:id="@+id/go_site_btn"
             android:layout_width="150dp"
             android:layout_height="48dp"
-            app:layout_constraintTop_toBottomOf="@id/place_site"
+            android:layout_marginTop="5dp"
             app:layout_constraintStart_toStartOf="@id/place_site"
+            app:layout_constraintTop_toBottomOf="@id/place_site"
             android:paddingStart="3dp"
             android:paddingEnd="5dp"
-            android:layout_marginTop="10dp"
             android:drawableStart="@drawable/icon_chrome"
-            android:elevation="20dp"
+            android:elevation="10dp"
             android:shadowColor="@color/black"
             android:textAllCaps="false"
             android:background="@drawable/go_to_placesite_btn_bg"
             android:fontFamily="@font/circular"
             android:text="@string/go_site"/>
 
+        <TextView
+            android:id="@+id/open_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/circular"
+            android:textSize="13sp"
+            android:layout_marginTop="15dp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:layout_marginStart="10dp"
+            app:layout_constraintTop_toBottomOf="@id/go_site_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/show_place_on_map"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/showMapBtn"
+            android:layout_width="match_parent"
+            app:cardElevation="15dp"
+            app:cardCornerRadius="20dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/open_map"
+            app:layout_constraintStart_toStartOf="@id/open_map"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="30dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="15dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/map_image"/>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
