--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         tools:context=".ui.fragments.DescriptionFragment">
 
-        <androidx.cardview.widget.CardView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/description_image_cardView"
             android:layout_width="match_parent"
             android:layout_height="255dp"
@@ -22,6 +22,7 @@
             <ImageView
                 android:id="@+id/description_place_image"
                 android:layout_width="match_parent"
+                android:src="@drawable/app_logo_new"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 />
@@ -31,12 +32,14 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/description_icon_back_bg"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
                 android:paddingVertical="8dp"
                 android:paddingStart="6dp"
                 android:paddingEnd="0dp"
-                app:drawableTopCompat="@drawable/icon_back" />
+                app:drawableTopCompat="@drawable/icon_back"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"/>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/description_icon_like"
@@ -44,8 +47,10 @@
                 android:layout_height="30dp"
                 app:cardCornerRadius="20dp"
                 android:visibility="gone"
-                android:layout_marginStart="370dp"
-                android:layout_marginTop="210dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 >
 
                 <ImageView
@@ -62,12 +67,15 @@
                 android:layout_width="25dp"
                 android:visibility="gone"
                 android:layout_height="25dp"
-                android:layout_marginStart="370dp"
-                android:layout_marginTop="210dp"
-                android:src="@drawable/icon_heart_red"/>
+                android:src="@drawable/icon_heart_red"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                />
 
 
-        </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/description_title"
